Second attempt to correct Views not updating

--- a/WebApplication/src/WebApplication/project.json
+++ b/WebApplication/src/WebApplication/project.json
@@ -47,7 +47,7 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "Views",
+      "Views/**/*.cshtml",
       "Areas/**/Views/**/*.cshtml",
       "appsettings.json",
       "web.config",
