--- a/WebApplication/src/WebApplication/project.json
+++ b/WebApplication/src/WebApplication/project.json
@@ -48,7 +48,7 @@
     "include": [
       "wwwroot",
       "Views",
-      "Areas/**/Views",
+      "**/*.cshtml",
       "appsettings.json",
       "web.config",
       "docker-compose.yml",
